tests/purs/failing/VisibleTypeApplications2.purs
-- @shouldFailWith CannotApplyExpressionOfTypeOnType
module Main where

id :: Int -> Int
id a = a

failTwo = id @Int
